--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,8 +1,8 @@
-.promo {
-    padding: 40px 80px 0;
+.promo { 
     background: url('../img/main-screen__bg.png') no-repeat 50%/cover;
     min-height: 960px;
     .menu {
+        padding: 40px 80px 0;
         display: flex;
         justify-content: space-between;
         &__navigation {
@@ -19,6 +19,128 @@
                 color: #FFFFFF;
                 text-decoration: none;
             } 
+        }
+    }
+    &__title {
+        width: 920px;
+        height: 180px;
+        padding-top: 190px;
+        font-weight: 700;
+        font-size: 64px;
+        line-height: 140%;
+        color: #FFFFFF;
+    }
+    &__date {
+        display: flex;
+        justify-content: space-between;
+        width: 498px;
+        padding-top: 50px;
+        .date {
+            width: 102px;
+            height: 112px;
+            background: #121212;
+            &__number {
+                padding-top: 20px;
+                font-weight: 700;
+                font-size: 36px;
+                line-height: 140%; 
+                text-align: center;     
+                color: #FFFFFF;
+            }
+            &__name {
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 140%;
+                text-align: center;
+                color: #FFFFFF;
+                opacity: 0.4;
+            }
+        }
+    }
+    &__order {
+        margin-top: 218px;
+        width: 100%;
+        height: 130px;
+        background: #121212;
+        .wrapper {
+            display: flex;
+            justify-content: start;
+            align-items: center;
+            height: 130px;
+            .counts {
+                margin-left: 81px;
+                display: grid;
+                grid-template-rows: repeat(2, 24px);
+                row-gap: 10px;
+                .row {
+                    display: grid;
+                    grid-template-columns: 193px 28px;
+                    column-gap: 30px;
+                    .title {
+                        font-weight: 400;
+                        font-size: 16px;
+                        line-height: 150%;
+                        color: #FFFFFF;
+                        opacity: 0.4;
+                    }
+                    .count {
+                        font-weight: 700;
+                        font-size: 16px;
+                        line-height: 150%;
+                        color: #FFFFFF;
+                    }
+                }
+            }
+            .profit {
+                width: 400px;
+                margin-left: 81px;
+                display: grid;
+                grid-template-rows: 24px 6px 24px;
+                row-gap: 5px;
+                .row {
+                    display: grid;
+                    grid-template-columns: repeat(2, 1fr);
+                    column-gap: 30px;
+                    .title {
+                        font-weight: 400;
+                        font-size: 16px;
+                        line-height: 150%;
+                        color: #FFFFFF;
+                        opacity: 0.4;
+                        &_right {
+                            text-align: end;
+                        }
+                    }
+                    .count {
+                        font-weight: 700;
+                        font-size: 16px;
+                        line-height: 150%;
+                        color: #FFFFFF;
+                    }
+                    &_bottom {
+                        justify-content: space-around;
+                    }
+                    &_scale {
+                        display: grid;
+                        grid-template-columns: 1fr;
+                        grid-column: 1 / 3;
+                        .scale {
+                            width: 100%;
+                            height: 6px;
+                            border-radius: 3px;
+                            border: none;
+                            background: #FFFFFF;
+                            .progress {
+                                width: 40%;
+                                height: 6px;
+                                border-radius: 3px;
+                                border: none;
+                                background: linear-gradient(94.78deg, #DF5950 11.19%, #451046 93.72%);
+                            }
+                        }  
+                    }
+                }
+            }
         }
     }
 }
