--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,8 +1,28 @@
 * {
     font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 .container {
-    width: 1315px;
+    width: 1100px;
+    margin: 0 auto;
+}
+.btn {
+    width: 169px;
+    height: 44px;
+    border-radius: 20px;
+    border: none;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 150%;
+    text-align: center;
+    color: #FFFFFF;
+    &_red {
+        background: linear-gradient(94.78deg, #DF5950 11.19%, #451046 93.72%);
+    }
+    &_purple {
+        background: linear-gradient(94.26deg, #C89AFC 9.51%, #7C6AFA 90.23%);
+    }
 }
 
 @import 'blocks/promo';
