--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,5 @@
+@import 'base/variables';
+
 * {
     font-family: 'Roboto', sans-serif;
     margin: 0;
@@ -18,11 +20,13 @@
     text-align: center;
     color: #FFFFFF;
     &_red {
-        background: linear-gradient(94.78deg, #DF5950 11.19%, #451046 93.72%);
+        background: $color-red;
     }
     &_purple {
-        background: linear-gradient(94.26deg, #C89AFC 9.51%, #7C6AFA 90.23%);
+        background: $color-purple;
     }
 }
 
 @import 'blocks/promo';
+@import 'blocks/about';
+@import 'blocks/start';
