--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -1,6 +1,6 @@
 .about {
     height: 542px;
-    padding: 200px 0;
+    padding: 200px 0 0 0;
     background: url('../img/bg.png');
     &__wrapper {
         width: 100%;
