--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,7 +6,7 @@
     padding: 0;
 }
 .container {
-    width: 1100px;
+    width: 1300px;
     margin: 0 auto;
 }
 .btn {
@@ -30,3 +30,5 @@
 @import 'blocks/promo';
 @import 'blocks/about';
 @import 'blocks/start';
+@import 'blocks/profession';
+@import 'blocks/partners';
