Complite HTML and CSS

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -32,3 +32,6 @@
 @import 'blocks/start';
 @import 'blocks/profession';
 @import 'blocks/partners';
+@import 'blocks/program';
+@import 'blocks/teachers';
+@import 'blocks/contacts';
