--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -60,18 +60,24 @@
     }
     .promo {
         .menu {
-            padding: 40px 0 0 0;
-            flex-direction: column;
+            padding: 40px 10px 0;
             align-items: center;
-            &__navigation {
-                margin-top: 20px;
-            }
             img {
                 width: 50px;
                 height: 50px;
             }
             button {
-                margin-top: 20px;
+                font-size: 12px;
+                width: 120px;
+                height: 35px;
+            }
+            &__item {
+                a {
+                    font-size: 12px;
+                }
+            }
+            &__navigation {
+                width: 690px;
             }
         }
         &__title {
@@ -130,5 +136,127 @@
     }
 }
 @media (max-width: 576px) {
-   
+    body._lock {
+        overflow: hidden;
+    }
+    .container {
+        width: 300px;
+        padding: 0 10px;
+    }
+    .promo {
+        min-height: 500px;
+        .menu {
+            padding: 15px 10px 0;
+            img {
+                z-index: 5;
+            }
+            // Бургер
+            &__icon {
+                z-index: 5;
+                display: block;
+                position: relative;
+                width: 30px;
+                height: 18px;
+                cursor: pointer;
+            }
+            &__icon span, 
+            &__icon::before,
+            &__icon::after {
+                left: 0;
+                position: absolute;
+                height: 10%;
+                width: 100%;
+                transition: all 0.3s ease 0s;
+                background-color: #fff;
+            }
+            &__icon::before,
+            &__icon::after {
+                content: ''; 
+            }
+            &__icon::before {
+                top: 0;
+            }
+            &__icon::after {
+                bottom: 0;
+            }
+            &__icon span {
+                top: 50%;
+                transform: scale(1) translate(0px, -50%);
+            }
+            &__icon._active span {
+                transform: scale(0) translate(0px, -50%);
+            }
+            &__icon._active::before {
+                top: 50%;
+                transform: rotate(-45deg) translate(0px, -50%);
+            }
+            &__icon._active::after {
+                bottom: 50%;
+                transform: rotate(45deg) translate(0px, 50%);
+            }
+            &__body {
+                position: fixed;
+                top: 0;
+                left: -100%;
+                width: 100%;
+                height: 100%;
+                background-color: rgba($color: #000000, $alpha: 0.9);
+                transition: left 0.3s ease 0s;
+                padding: 100px 0 0 0;
+                overflow: auto;
+            }
+            &__body._active {
+                left: 0;
+            }
+            &__navigation {
+                flex-direction: column;
+                width: 190px;
+                row-gap: 10px;
+                margin: 0 auto;
+            }
+            &__item {
+                a {
+                    font-size: 20px;
+                }
+            }
+            button {
+                width: 150px;
+                height: 44px;
+                font-size: 16px;
+            }
+
+        }
+        &__title {
+            width: 280px;
+            font-size: 35px;
+            text-align: center;
+            margin: 0 auto;
+        }
+        &__order {
+            height: 210px;
+            margin-top: 35px;
+            .wrapper {
+                .counts {
+                    margin-left: 0;
+                }
+                .profit {
+                    margin-left: 0;
+                    width: 280px;
+                    .row {
+                        width: 280px;
+                    }
+                }
+            }
+        }
+        &__date {
+            flex-direction: column;
+            width: 150px;
+            margin: 0 auto;
+            padding-top: 0;
+            row-gap: 15px;
+            .date {
+                width: 100%;
+            }
+        }
+    }
 }
