--- a/src/sass/blocks/_teachers.scss
+++ b/src/sass/blocks/_teachers.scss
@@ -60,5 +60,7 @@
         line-height: 150%;
         text-align: center;
         color: #FFFFFF;
+        cursor: pointer;
+        background: none;
     }
 }
