--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,6 +19,7 @@
     line-height: 150%;
     text-align: center;
     color: #FFFFFF;
+    cursor: pointer;
     &_red {
         background: $color-red;
     }
